nav alignment on mobile fixed

--- a/style.css
+++ b/style.css
@@ -257,8 +257,8 @@
 	.topnav {
 	  background-color: #333;
 	  overflow: hidden;
-	  top: 0px;
-	  left: 0px;
+	  top: -3px;
+	  left: -3px;
 	  position: fixed;
 	  width: 100%;
 	  text-align: center;
